--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.18",
     "nodemailer": "^6.5.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "randomstring": "^1.1.5",
     "request": "^2.88.2",
     "xss-clean": "^0.1.1"
